--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -17,15 +17,29 @@
   </div>
   <div class="input-container">
     <%= form.label :description %>
-    <%= form.text_area :description, class: "form-control", autofocus: true %>
+    <%= form.text_area :description, class: "form-control", autofocus: true, rows: 5 %>
   </div>
   <div class="input-container">
     <%= form.label :year_of_release %>
     <%= form.number_field :year_of_release, class: "form-control", autofocus: true %>
   </div>
+  <% if is_owner(@venue) %>
+    <div class="check-container mt-4">
+      <%= form.check_box :is_disabled %>
+      <%= form.label :is_disabled, "Unavailable" %>
+    </div>
+    <div class="input-container">
+      <%= form.label :disabled_reason, "Why unavailable?" %>
+      <%= form.text_area :disabled_reason, class: "form-control", autofocus: true, rows: 5 %>
+    </div>
+  <% end %>
 
-  <div class="flex justify-end mt-4">
-    <%= link_to 'Cancel', venues_path %>
-    <%= form.submit (), class: "btn btn-primary ml-3" %>
+  <div class="custom-form-submission mt-4 screen-sm-only">
+    <%= link_to 'Cancel', movies_path, class: "btn mr-1" %>
+    <%= form.submit (), class: "btn btn-primary ml-1" %>
+  </div>
+  <div class="flex justify-end mt-4 _screen-md">
+    <%= link_to 'Cancel', movies_path, class: "btn" %>
+    <%= form.submit (), class: "btn btn-primary ml-2" %>
   </div>
 <% end %>
