--- a/app/views/movies/edit.html.erb
+++ b/app/views/movies/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Movie</h1>
+<div class="container">
+  <h1 class="heading-3">Edit movie...</h1>
 
-<%= render 'form', movie: @movie %>
-
-<%= link_to 'Show', @movie %> |
-<%= link_to 'Back', movies_path %>
+  <%= render 'form', movie: @movie %>
+</div>
