--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>New Movie</h1>
+  <h1 class="heading-3">New movie...</h1>
 
   <%= render 'form', movie: @movie %>
 </div>
