--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Editing Venue</h1>
+  <h1 class="heading-3">Edit venue...</h1>
 
   <%= render 'form', venue: @venue %>
 </div>
