--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>New Venue</h1>
+  <h1 class="heading-3">New venue...</h1>
 
   <%= render 'form', venue: @venue %>
 </div>
